--- a/static/slides/writing-slides.Rmd
+++ b/static/slides/writing-slides.Rmd
@@ -60,7 +60,7 @@ y &= 4
 
 # RMarkdown: code and plots
 
-```{r, warning=FALSE}
+```{r, warning=FALSE, message=FALSE}
 library(ggplot2)
 ```
 ```{r, fig.align='center', fig.width=8, fig.height=4}
